--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,196 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 2rem;
+  color: #d4d4d8;
+  /* padding: 2rem; */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.App {
+  display: grid;
+  grid-template-columns: 60rem 1fr;
+  height: 100vh;
+}
+.sidebar {
+  padding: 5rem 3rem;
+  background-color: #18181b;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.sidebar-intro {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.sidebar-intro h1 {
+  font-size: 4rem;
+}
+.sidebar-intro p {
+  line-height: 1.4;
+  font-size: 1.8rem;
+}
+
+.sidebar-social-icons {
+  padding: 2rem 0 0 0;
+  display: flex;
+  gap: 1.5rem;
+}
+.sidebar-social #a .icon-inner {
+  cursor: pointer;
+}
+.icon {
+  width: fit-content;
+  padding: 0;
+  background-color: #18181b;
+  font-size: 2.5rem;
+  color: inherit;
+  cursor: pointer;
+  border: none;
+}
+
+.btn {
+  background-color: #d97706;
+  border-radius: 9px;
+  width: fit-content;
+  padding: 1.2rem 2.4rem;
+  color: inherit;
+  font-size: 1.8rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+.section {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  padding: 5rem 3rem;
+}
+.section:first-child {
+  padding-top: 0;
+}
+.section-about .profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.paragraphs {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  font-size: 1.8rem;
+  line-height: 1.4;
+}
+.section-about .profile img {
+  width: 25rem;
+  border-radius: 50%;
+}
+
+.main {
+  overflow: auto;
+  padding: 5rem 0 0 0;
+  background-color: #27272a;
+}
+.project-img {
+  margin: 5rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+
+  /* overflow: hidden; */
+}
+.project-laptop {
+  max-width: 70rem;
+
+  overflow: hidden;
+}
+
+.project-pic {
+  width: 100%;
+  /* z-index: 100; */
+  /* position: absolute; */
+  /* background-image: url("../public/images/keepnotes.png"); */
+  /* background-size: contain; */
+  /* background-repeat: no-repeat; */
+  /* background-clip: border-box; */
+  /* background-position: center; */
+}
+.project-content {
+  width: 74%;
+  height: 75%;
+  position: absolute;
+  /* z-index: 1; */
+}
+
+.project-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 3rem;
+}
+.project-links a {
+  text-decoration: none;
+  color: #d4d4d8;
+}
+
+.project-links a:first-child {
+  font-size: 1.5rem;
+}
+.section-project-1 {
+  background-color: #1b1f2e;
+}
+.section-project-2 {
+  /* background-color: #5e1e30; */
+  background-color: #2e030f;
+}
+.section-project-3 {
+  background-color: #083344;
+}
+.section-project-4 {
+  background-color: #1b1f2e;
+}
+.section-project-5 {
+  background-color: #27272a;
+}
+
+@media (max-width: 950px) {
+  .App {
+    display: grid;
+    grid-template-columns: 1fr;
+    height: auto;
+  }
+  .sidebar {
+    height: 100vh;
+  }
+}
+
+.comingSoon {
+  font-size: 4rem;
+  text-align: center;
+}
+
+.external {
+  text-decoration: none;
+  color: #d97706;
 }
