--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,9 @@ code {
 .section-about .profile img {
   width: 25rem;
   border-radius: 50%;
+  aspect-ratio: 1;
+  object-fit: cover;
+  object-position: center;
 }
 
 .main {
@@ -128,6 +131,7 @@ code {
 
 .project-pic {
   width: 100%;
+
   /* z-index: 100; */
   /* position: absolute; */
   /* background-image: url("../public/images/keepnotes.png"); */
